# libvirt-rs

./: .gitattributes  Cargo.toml  Dockerfile.build  README.md
.claude/: settings.local.json
crates/libvirt/: Cargo.toml  build.rs
crates/libvirt-codegen/: Cargo.toml  README.md
crates/libvirt-codegen/src/: ast.rs  generator.rs  lib.rs  parser.rs
crates/libvirt-xdr/: Cargo.toml  README.md
crates/libvirt-xdr/src/: de.rs  error.rs  lib.rs  opaque.rs  ser.rs
crates/libvirt/examples/: domain_info.rs  domain_lifecycle.rs  list_domains.rs
crates/libvirt/src/: connection.rs  error.rs  lib.rs  packet.rs
crates/libvirt/src/transport/: mod.rs  unix.rs
docs/design/: architecture.md
examples/: test_parse.rs
