[package]
name = "libvirt-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code generator for libvirt protocol (.x files)"

[[bin]]
name = "test-parse"
path = "src/bin/test_parse.rs"

[dependencies]
nom.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
prettyplease.workspace = true
heck.workspace = true
