[package]
name = "libvirt-xdr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "XDR serialization/deserialization for libvirt protocol"

[dependencies]
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
serde_json = "1"
