[package]
name = "libvirt-xdr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "XDR serialization/deserialization for libvirt protocol"
readme = "README.md"

[dependencies]
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
serde_json = "1"
