[package]
name = "libvirt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Pure Rust libvirt client library"
readme = "../../README.md"

[dependencies]
libvirt-xdr.workspace = true
tokio.workspace = true
# tokio-rustls.workspace = true  # TLS support (disabled for now)
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true
dashmap.workspace = true
async-trait.workspace = true

[build-dependencies]
libvirt-codegen.workspace = true
